// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convertGeojsonPointsToGeoSystemeId > toutes les conversions 1`] = `
{
  "2154": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -6508915.664375298,
            4155227.2486715293,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -6509838.379601351,
            4156321.503214284,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -6508315.743755955,
            4158116.456688329,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "27561": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -6705121.61250076,
            -2533464.314156466,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -6706045.365292369,
            -2532311.7342340853,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -6704428.434049787,
            -2530499.1943537975,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "27563": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -6419903.998539594,
            -2132422.3744552927,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -6420844.302907188,
            -2131387.1943672756,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -6419422.26215663,
            -2129579.828581271,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "27571": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -6705121.61250076,
            -1533464.3141564662,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -6706045.365292369,
            -1532311.7342340853,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -6704428.434049787,
            -1530499.1943537975,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "27572": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -6558012.142644974,
            -330085.70153978,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -6558943.952043006,
            -328992.23226204794,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -6557425.0718446905,
            -327182.74701307714,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "27573": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -6419903.998539594,
            867577.6255447073,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -6420844.302907188,
            868612.8056327244,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -6419422.26215663,
            870420.1714187288,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "2970": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            1667693.002642631,
            474962.27304501686,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            1666562.013422814,
            475136.9208461822,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            1666536.3821532296,
            477018.79235749214,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "2972": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            329078.1462566799,
            466912.7568635224,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            327968.36777390563,
            467101.87921943853,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            327972.06552555226,
            468953.34014603146,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "2975": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -10635907.529523982,
            28583935.690351125,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -10632537.837798638,
            28584100.0361242,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -10631349.492396124,
            28578682.38840603,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "32620": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            1667272.1766110498,
            474656.11260267516,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            1666141.1911915715,
            474830.76448165777,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            1666115.5675545805,
            476712.63103764126,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "32621": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            995446.594222497,
            468165.6553138382,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            994332.421942425,
            468346.6813927581,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            994321.7585003038,
            470203.04016723786,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "32622": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            329078.14625669573,
            466912.7568788742,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            327968.3677739216,
            467101.8792347965,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            327972.06552556844,
            468953.3401614499,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "32630": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -5841798.951395092,
            720788.3745672021,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -5843479.1534257,
            721224.1298748096,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -5843230.650385964,
            724068.2261216913,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "3313": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            995446.5942225576,
            468165.6552984868,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            994332.4219424853,
            468346.6813774005,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            994321.7585003646,
            470203.04015181964,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "3949": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -5649322.981644171,
            5568553.523243326,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -5650238.180866389,
            5569703.215678348,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -5648623.59710415,
            5571501.099138989,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "4171": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "4230": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "4275": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.5384701246372,
            4.220239072221915,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.548470035581744,
            4.221929661220853,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.54847000271151,
            4.238675131063746,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "4326": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "4467": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            995446.5942225576,
            468165.6552984868,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            994332.4219424853,
            468346.6813774005,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            994321.7585003646,
            470203.04015181964,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "4471": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -16143544.355460875,
            26292802.745847106,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -16136616.09490179,
            26296480.29590045,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -16128766.302407652,
            26286263.400504485,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "4624": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "4807": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -60.97299921255985,
            4.689154524691016,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -60.98411022472045,
            4.691032956912059,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -60.984110188197974,
            4.709639034515273,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "5490": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            1667272.1766113704,
            474656.11258733075,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point 8",
          "nom": "8",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            1666141.191191891,
            474830.76446630707,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point W",
          "nom": "W",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            1666115.5675549011,
            476712.6310222301,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "description point *",
          "nom": "*",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
}
`;

exports[`geojsonImport > csv valide avec des virgules 1`] = `
{
  "communes": [],
  "foretIds": [],
  "geojson4326_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              -52.54,
              4.22269896902571,
            ],
            [
              -52.55,
              4.22438936251509,
            ],
            [
              -52.55,
              4.24113309117193,
            ],
            [
              -52.54,
              4.22269896902571,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson4326_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point éç",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "geojson_origine_geo_systeme_id": "4326",
  "geojson_origine_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              -52.54,
              4.22269896902571,
            ],
            [
              -52.55,
              4.22438936251509,
            ],
            [
              -52.55,
              4.24113309117193,
            ],
            [
              -52.54,
              4.22269896902571,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson_origine_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point éç",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "sdomZoneIds": [],
  "secteurMaritimeIds": [],
  "superposition_alertes": [],
  "surface": 1.03,
}
`;

exports[`geojsonImport > csv valide en 2972 1`] = `
{
  "communes": [],
  "foretIds": [],
  "geojson4326_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              -40.598937151159184,
              61.54628068732175,
            ],
            [
              -40.37064788704864,
              61.5292784396591,
            ],
            [
              -40.41816675268371,
              61.507313698979104,
            ],
            [
              -40.598937151159184,
              61.54628068732175,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson4326_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -40.598937151159184,
            61.54628068732175,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -40.37064788704864,
            61.5292784396591,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -40.41816675268371,
            61.507313698979104,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point C",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "geojson_origine_geo_systeme_id": "2972",
  "geojson_origine_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              1051195.1083143658,
              6867800.046355472,
            ],
            [
              1063526.39792456,
              6867885.978687251,
            ],
            [
              1061421.0557959902,
              6865050.211738565,
            ],
            [
              1051195.1083143658,
              6867800.046355472,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson_origine_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            1051195.1083143658,
            6867800.046355472,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            1063526.39792456,
            6867885.978687251,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            1061421.0557959902,
            6865050.211738565,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point C",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "sdomZoneIds": [],
  "secteurMaritimeIds": [],
  "superposition_alertes": [],
  "surface": 17.27,
}
`;

exports[`geojsonImport > csv valide en 4326 1`] = `
{
  "communes": [],
  "foretIds": [],
  "geojson4326_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              -52.54,
              4.22269896902571,
            ],
            [
              -52.55,
              4.22438936251509,
            ],
            [
              -52.55,
              4.24113309117193,
            ],
            [
              -52.54,
              4.22269896902571,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson4326_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point éç",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "geojson_origine_geo_systeme_id": "4326",
  "geojson_origine_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              -52.54,
              4.22269896902571,
            ],
            [
              -52.55,
              4.22438936251509,
            ],
            [
              -52.55,
              4.24113309117193,
            ],
            [
              -52.54,
              4.22269896902571,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson_origine_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point éç",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "sdomZoneIds": [],
  "secteurMaritimeIds": [],
  "superposition_alertes": [],
  "surface": 1.03,
}
`;

exports[`geojsonImport > csv valide en 4326 avec les anciens headers 1`] = `
{
  "communes": [],
  "foretIds": [],
  "geojson4326_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              -52.54,
              4.22269896902571,
            ],
            [
              -52.55,
              4.22438936251509,
            ],
            [
              -52.55,
              4.24113309117193,
            ],
            [
              -52.54,
              4.22269896902571,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson4326_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point éç",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "geojson_origine_geo_systeme_id": "4326",
  "geojson_origine_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              -52.54,
              4.22269896902571,
            ],
            [
              -52.55,
              4.22438936251509,
            ],
            [
              -52.55,
              4.24113309117193,
            ],
            [
              -52.54,
              4.22269896902571,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson_origine_points": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -52.54,
            4.22269896902571,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.22438936251509,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -52.55,
            4.24113309117193,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point éç",
          "nom": "C",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "sdomZoneIds": [],
  "secteurMaritimeIds": [],
  "superposition_alertes": [],
  "surface": 1.03,
}
`;

exports[`geojsonImport > fichier valide geojson 2154 1`] = `
{
  "communes": [],
  "foretIds": [],
  "geojson4326_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              7.785447944275908,
              48.81446215755622,
            ],
            [
              7.953116703424841,
              48.80839897772424,
            ],
            [
              7.922100156138546,
              48.784128049338925,
            ],
            [
              7.785939585784082,
              48.78153599978831,
            ],
            [
              7.697613836339629,
              48.80246529009569,
            ],
            [
              7.73006761550998,
              48.817829852380825,
            ],
            [
              7.785447944275908,
              48.81446215755622,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson4326_points": null,
  "geojson_origine_geo_systeme_id": "2154",
  "geojson_origine_perimetre": {
    "geometry": {
      "coordinates": [
        [
          [
            [
              1051195.1083143658,
              6867800.046355472,
            ],
            [
              1063526.39792456,
              6867885.978687251,
            ],
            [
              1061421.0557959902,
              6865050.211738565,
            ],
            [
              1051452.9053097009,
              6864147.922254892,
            ],
            [
              1044836.1157627675,
              6866081.399719905,
            ],
            [
              1047113.3225548939,
              6867928.94485314,
            ],
            [
              1051195.1083143658,
              6867800.046355472,
            ],
          ],
        ],
      ],
      "type": "MultiPolygon",
    },
    "properties": {},
    "type": "Feature",
  },
  "geojson_origine_points": null,
  "sdomZoneIds": [],
  "secteurMaritimeIds": [],
  "superposition_alertes": [],
  "surface": 51.48,
}
`;

exports[`geojsonImportForages > csv valide en 2972 1`] = `
{
  "geojson4326": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            -40.598937151159184,
            61.54628068732175,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
          "profondeur": 12.12,
          "type": "rejet",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            -40.37064788704864,
            61.5292784396591,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
          "profondeur": 12.12,
          "type": "captage",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "origin": {
    "features": [
      {
        "geometry": {
          "coordinates": [
            1051195.1083143658,
            6867800.046355472,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point A",
          "nom": "A",
          "profondeur": 12.12,
          "type": "rejet",
        },
        "type": "Feature",
      },
      {
        "geometry": {
          "coordinates": [
            1063526.39792456,
            6867885.978687251,
          ],
          "type": "Point",
        },
        "properties": {
          "description": "Point B",
          "nom": "B",
          "profondeur": 12.12,
          "type": "captage",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
}
`;
